--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "lodash": "^4.17.4",
     "mocha": "^2.3.4",
     "nanomodal": "^5.1.0",
-    "openlayers": "^3.16.0",
+    "ol": "^5.0.0",
     "simplify-js": "^1.2.1",
     "uglify-js": "^2.4.20",
     "watchify": "^3.1.2",
@@ -38,7 +38,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "watchify index.js --exclude mdns --ignore bufferutil --ignore utf-8-validate --outfile bundle.js",
-    "build": "browserify index.js --exclude mdns --ignore bufferutil --ignore utf-8-validate -o bundle.js"
+    "build": "browserify index.js --exclude mdns --ignore bufferutil --ignore utf-8-validate -o bundle.js --debug"
   },
   "author": "robert@42.co.nz",
   "license": "Apache v2",
