--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "bootstrap-slider": "^4.8.0",
     "bootstrap-toggle": "^2.0.0",
     "browser": "^0.2.6",
-    "browserify": "^9.0.8",
     "debug": "^2.1.3",
     "font-awesome": "^4.6.3",
     "jquery": "^2.1.3",
@@ -33,12 +32,15 @@
     "uglify-js": "^2.4.20",
     "watchify": "^3.1.2",
     "web-audio-daw": "^2.3.1",
+    "webpack": "^4.14.0",
+    "webpack-command": "^0.3.1",
+    "webpack-node-externals": "^1.7.2",
     "xml2js": "^0.4.16"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "watchify index.js --exclude mdns --ignore bufferutil --ignore utf-8-validate --outfile bundle.js",
-    "build": "browserify index.js --exclude mdns --ignore bufferutil --ignore utf-8-validate -o bundle.js --debug"
+    "build": "webpack --config webpack.config.js --mode production"
   },
   "author": "robert@42.co.nz",
   "license": "Apache v2",
